--- a/photography.css
+++ b/photography.css
@@ -26,11 +26,6 @@ html {
 
 /*styling for Navigation Bar*/
 /* Add a black background color to the top navigation */
-.topnav {
-  background-color: #0f0f0f;
-  position: absolute;
-  margin:auto;
-}
 
 .banner a .fa {
   width: auto;
@@ -47,8 +42,9 @@ html {
   background-color: #0f0f0f;
   /* overflow: hidden; */
   margin:auto;
-  padding-bottom:2vh;
-  
+  padding:.5em 0 .5em 2vh;
+  width:100%;
+  display:flex;
 }
 
 /* Style the links inside the navigation bar */
@@ -56,10 +52,15 @@ html {
   float: center;
   color: #f2f2f2;
   text-align: center;
-  padding: 2vw 6vw;
   text-decoration: none;
   font-size: 2.8vh;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-item{
+  display:inline-block;
+  flex: 1 1 0px;
+  text-align:center;
 }
 
 .banner a .fa {
@@ -90,6 +91,7 @@ html {
 dropdown:hover .dropdown-menu {
   display: block;
 }
+
 
 
 /*styling for the header which holds the banner and navagtion*/
@@ -385,7 +387,7 @@ h1{
 
 
 
-  /*Our Work page styling*/
+  /*Our Collection styling*/
 
   /*this section appears at the top of the majority of pages*/
     /*Our Work page styling*/
@@ -393,7 +395,6 @@ h1{
   /*this section appears at the top of the majority of pages*/
   .text_heading{
     display: inline-block;
-    height: 30vh;
     width: 100%;
   }
 
@@ -501,18 +502,18 @@ h1{
 
 
 .content-aboutannika img{
-  max-height:622.67px;
-  max-width:892.65px;
+  max-width:622.67px;
+  max-height:892.65px;
   border-radius: 50px;
   height: auto;
-  width:auto;
+  width:41%;
   margin-left: 3vw;
   margin-top: 5vh;
   float: left;
 }
 
 .about_text {
-  font-size: 2vw;
+  font-size: 1.8vw;
   margin-left: 47vw;
   padding-top: 5vh;
   font-family: Arial, Helvetica, sans-serif;
@@ -534,7 +535,8 @@ h1{
   border-width: 0;
   position:absolute;
   left:50%;
-  transform:translate(-50%, 0);
+  margin-top:5vh;
+  margin-bottom:5vh;
 }
 
 .getintouch-about h1{
@@ -649,7 +651,7 @@ h1{
 }
 
 .hero-image img{
-  height: 70vh;
+  height: auto;
   width: 100%;
 }
 
@@ -670,20 +672,101 @@ h1{
 }
 
 .sub-heading_contactus {
-  font-size: 1.5em;
+  font-size: 2em;
   text-align:center;
   color:rgb(78, 76, 76);
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.contactus-form form{
+  width:80%;
+  height:100%;
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.contactus-form__form{
+  flex: 0.6 0.6 0;
+  display:flex;
+  flex-wrap:wrap;
+  margin-right: .5em;
+}
+
+.contactus-form_input{
+  font-size:18px;
+  flex: 1 1 100%;
+  margin:.5em;
+  height:2.5em;
+}
+
+.contactus-form_input input, .contactus-form_input textarea{
+  width:100%;
+  height:100%;
+  background-color: #FDE3FF;
+  border:none;
+}
+
+.contactus-form_input--name{
+  flex: 0.5 0.5 0;
+}
+
+.contactus-form_input--message{
+  height:30%;
+  margin-bottom:0;
+}
+
+.contactus-form_img{
+  flex: 0.4 0.4 0;
+  height:100%;
+  margin-left: .5em;
+}
+
+.contactus-form_img img{
+  height:100%;
+  margin: .5em 0;
+  width:100%;
+}
+
+.contactus-form_submit{
+  flex: 1 1 100%;
+  padding: 0.2em 0.5em;
+  height:6vh;
+  width:5vw;
+}
+
+
+.contactus-form_submit-container{
+  width:60%;
+  display:flex;
+  justify-content: right;
+}
+
+.contactus-form_submit-container > div{
+  margin-right:.5em;
+}
+
+.contactus-form_submit input{
+  font-size:18px;
+  margin-right:.5em;
+}
+
+.validationButton{
+  background-color:#FDE3FF;
+  border:none;
+  height:6vh;
+  width:10vw;
+}
+
+.contactus-form{
+  width:100%;
+  padding:.5em .3em;
+  display:flex;
+  justify-content: center;
+}
 
 .contactUsForm {
 max-width: 800px;
 font-size: 40px;
-}
-
-.contactUsForm .row {
-padding-bottom: 3em;
 }
 
 .contactUsForm textarea, .contactUsForm input {
@@ -692,9 +775,6 @@ border: none;
 height:5vh;
 }
 
-.mobileNumber{
-  margin-top:2vh;
-}
 
 .contactUsForm textarea {
 width: 95%;
@@ -707,22 +787,6 @@ height:13vh;
 width: 90%;
 }
 
-.contactUsForm__robotCheck {
-background-color: #FDE3FF;
-padding: 0.2em 0.5em;
-float: right;
-margin-right: 10%;
-margin-bottom:5vh;
-width:10vw;
-height:6vh;
-}
-
-.contactUsForm__robotCheck input, .contactUsForm_robotCheck label{
-  vertical-align:middle;
-  margin-right:1em;
-  margin-left:1em;
-}
-
 
 .contactUsForm input[type="submit"] {
 padding: 0.2em 0.5em;
@@ -730,37 +794,30 @@ height:6vh;
 width:5vw;
 }
 
-.required-field {
-color: red;
-}
 
-
-.submit_btn {
-background-color:#E987F5;
-height: 15vh;
-width: 27vw;
-font-size: 5vh;
-font-family: Arial, Helvetica, sans-serif;
-border-radius: 10px;/*curves the edges of the button to fit the design*/
-margin-top:  8vh;
-margin-right: 5vw;
-border-width: 0;
-margin-bottom: 50vh;
-}
-
-.submit_btn a{
-  text-decoration: none;
-  color:white;
+/*responsive styling for the contact us forn*/
+@media only screen and (max-width: 1000px){
+  .contactus-form_input{
+    font-size:12px;
+    flex: 1 1 100%;
+    margin:.5em;
+    height:2.5em;
   }
   
-  .submit_btn a:hover{
-  color:black;
+  .validationButton{
+    background-color:#FDE3FF;
+    border:none;
+    height:auto;
+    width:10vw;
+  }
+  
+  .contactUsForm {
+  max-width: 700px;
+  font-size: auto;
   }
 
-
-.contactusform-image{
-  float:right;
 }
+
 
 
 /*styling for PRICING PAGE*/
@@ -849,6 +906,61 @@ color:black;
   justify-content:center!important;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.faq-item{
+  margin:3vh 10vw;
+}
+
+.faq-item p{
+  font-size:18px;
+}
+
+.faq-item__question{
+  background-color:#d794df;
+  padding:1em;
+  border-radius:2em;
+  position: relative; /* <-- ADD THIS LINE */
+}
+
+.faq-item__question h4{
+  font-size:24px;
+  color:white;
+}
+
+.faq-item__answer{
+  padding:1em;
+}
+
+/* vvv NEW CSS vvv */
+
+.hidden {
+  display: none;
+}
+
+.faq-item .icon {
+  color: white;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(0, -50%);
+}
+
+.faq-item .icon i {
+  padding: 0;
+}
+
+/* 
 .faq-title{
   font-size:32px;
   margin:2vh 10vw;
@@ -876,7 +988,7 @@ color:black;
 
 .faq-item__answer{
   padding:1em;
-}
+} */
 
 .getintouch-faq{
   background-color:#E987F5;
@@ -906,76 +1018,6 @@ color:black;
 font-size:3vh;
 }
 
-
-/* galleries.html page styling */
-/* 
-.content-gallery {
-  margin: 5vh 5vw;
-  align-items: center;
-}
-
-.content-gallery h2 {
-  font-size: 36px;
-  font-family:Arial, Helvetica, sans-serif;
-  color:#E987F5;
-}
-
-.gallery-row {
-  display: flex;
-  justify-content: center;
-}
-
-.gallery-card {
-  max-width: 500px;
-  height:100%;
-  margin: 3em;
-  display: inline-block;
-  position:relative;
-  cursor:pointer;
-}
-
-.gallery-card img {
-  width: 100%;
-  height:100%;
-  border-radius:20px;
-}
-
-.gallery-card__title {
-  padding:.5em;
-  height:100%;
-  width:100%;
-  position:absolute;
-  top:0;
-  border-radius:20px;
-  display:flex;
-  justify-content:center;
-} 
-.gallery-card__title :hover {
-  padding:.5em;
-  height:20%;
-  width:40%;
-  background-color:rgba(250, 260, 246, 0.3);
-  position:absolute;
-  top:0;
-  border-radius:20px;
-  display:flex;
-  justify-content:center;
-}
-
-.gallery-card__title p:hover{
-  font-size:35px;
-  font-family:Arial, Helvetica, sans-serif;
-  display:flex;
-  align-items:center;
-}
-
-.gallery-button :hover{
-  font-size:35px;
-  font-family:Arial, Helvetica, sans-serif;
-  display:flex;
-  align-items:center;
-}
- */
 
 /*styling for the contact us submit page*/
 .content-image img{
@@ -1086,14 +1128,12 @@ font-size:3vh;
 
 
 
-
-
   @media only screen and (max-width: 768px){
     /*responsive styling for navigation*/
-    .topnav > a, .topnav > .dropdown {
-      display: none;
+    .nav-item{
+      display:none;
     }
-  
+
     .banner {
       height:142px;
     }
@@ -1105,10 +1145,13 @@ font-size:3vh;
       display:block;
     }
 
-    .topnav.mobile-size > a, .topnav.mobile-size > .dropdown {
+    .topnav.mobile-size .nav-item {
       display:block;
     }
 
+    .topnav.mobile-size{
+      display:block;
+    }
     /*responsive styling for footer*/
    .footer .col{
     flex: 1 1 100%;
@@ -1171,6 +1214,9 @@ font-size:3vh;
      font-size:5vh;
    }
 
+   .homepage-img img{
+     height:auto;
+   }
 
   /*responsive styling for our work page*/
   .heading-text{
@@ -1192,23 +1238,6 @@ font-size:3vh;
       font-family: Arial, Helvetica, sans-serif;
   }
 
-  /* .image-feature__text {
-    font-size: 1vh;
-    padding: 5em 5em 5em .5em;
-  }
-  
-  .image-feature--right .image-feature__text {
-    padding: 5em .5em 5em 5em;
-  }
-
-  .image-feature__text {
-    font-size: 2vh;
-    padding: 3em 3em 3em .3em;
-  }
-  
-  .image-feature--right .image-feature__text {
-    padding: 3em .3em 3em 3em;
-  } */
 
   
   .image-feature:not(.image-feature--right){
@@ -1251,9 +1280,13 @@ font-size:3vh;
       margin:0
     }
   
-  /*responsive styling for our customers page*/
+  /*responsive styling for testimonial page*/
   .customer-feedback {
     height: auto;
+}
+
+.testimonialimg img{
+  height:auto;
 }
 
 /*responsive styling for about annika page*/
@@ -1271,7 +1304,6 @@ font-size:3vh;
 .content-aboutannika{
   height: auto;
   width: 100%;
-  margin-bottom: 90vh;
 }
 
 .content-aboutannika img{
@@ -1282,9 +1314,9 @@ font-size:3vh;
 }
 
 .about_text {
-  width:100%;
   font-size: 3vw;
-  margin-left:20vw;
+  margin-left:10vw;
+  margin-bottom:20vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -1293,14 +1325,15 @@ font-size:3vh;
   background-color:#E987F5;
   padding:1em;
   font-size:2vh;
-  width:60vw;
+  width:40vw;
   margin-top:3em;
   height:auto;
+  margin-left:2vw;
 }
 
 .getintouch-about a{
   font-size:1.5vh;
-};
+}
 
 /*responsive styling for contact us page*/
 .hero-image{
@@ -1321,8 +1354,14 @@ font-size:3vh;
   margin-left:1vw;
 }
 
+.sub-heading_contactus{
+  text-align:left;
+  font-size:2vh;
+  margin-left:3vw;
+}
+
 .heading-text_contactus{
-  font-size: 2.5em;
+  height:auto;
   text-align: left;
   color:#E987F5;
   margin-left: 2vw;
@@ -1332,15 +1371,46 @@ font-size:3vh;
   overflow: hidden
 }
 
+
   .contactUsForm input[type="submit"]{
     width:auto;
     padding: 0 1.5em;
+    height:auto;
   }
 
   .contactUsForm__robotCheck{
     width:auto;
     padding:0 1.5em;
   }
+
+
+
+  /*responsive styling for pricing page*/
+  .content-pricing img{
+    border-radius: 50px;
+    height: 70vh;
+    margin-left: 2vw;
+    float:right;
+    }
+    
+    .content-pricing{
+      height: 50vh;
+      width: 100%;
+    }
+
+    
+    .pricing_text {
+    font-size: 2vh;
+    margin-left: 7vw;
+    padding-top: 5vh;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .pricing-subheader{
+      font-size:3vh;
+      font-family:Arial, Helvetica, sans-serif;
+    }
+
 
   /*responsive stlying for faq page*/
   .getintouch-faq{
